style.css
/*
Theme Name: patrickgraf
Theme URI: https://github.com/jean-michel-gonet/wp-theme-patrickgraf
Description: Clean simplified theme customized for Patrick Graf, with responsive content support.
Authors: Jean-Michel Gonet and Werner Arnold
Author URI: jmgonet.agl-developpement.ch
Version: 1.6

Tags:

License:
License URI:
*/

@import "fonts/css/akzidenz-grotesk-extraboldalt.css";
@import "fonts/css/akzidenz-grotesk-regular.css";
@import "fonts/css/akzidenz-grotesk-super.css";
@import "fonts/css/akzidenz-grotesk-bold.css";
/* Reset */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	vertical-align: baseline;
}

/* Globals */
article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
audio:not([controls]) { display: none; }
[hidden] { display: none; }
html { 
        font-size: 9.5pt;
        font-family: "AG-Regular", clean, sans-serif;
	letter-spacing: 0.35pt;
	height: 100%; 
	-webkit-text-size-adjust: 100%; 
	-ms-text-size-adjust: 100%; 
}
::-moz-selection { background: #ff0; color: #000; text-shadow: none; }
::selection { background: #ff0; color: #000; text-shadow: none; }
body { 
	position: relative;
	min-height: 100%;
}
a {text-decoration: none; color: #247eb7;}
h1,h2 {font-family: AG-Bold, clean, sans-serif;}
h1 {font-size: 24px;}
h2 {font-size: 18px;}
blockquote, p {font-size: 9.5pt; color: #ce545f;}
blockquote { padding: 0 5%; color: #888; font-style: italic; font-family: georgia, serf; border-left: 2px solid #ddd;}
code { font-family: "Lucida Console" monospace, monospace; _font-family: 'Lucida Console', monospace; font-size: 15px; font-weight: 900; color: #4b9162; }
strong { 
	font-family: AG-Bold, clean, sans-serif; 
	font-weight: normal;
}
figure { margin: 10% 0; }
figcaption { text-align: center; }

/* Image viewer */
[role="main"] img {
	max-width: 100%; 
	height: auto;
}

.image-viewer {
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	position: fixed;
	background-color: rgba(255, 255, 255, 1);
	z-index: 10;
	overflow: scroll;
	align-items: center;
	display: none;
}
.image-viewer.active {
	display: block;
}

.image-viewer img {
	padding: 1em;
	display: block;
}

.noscroll {
	overflow: hidden;
}

/* Layout */
.container { 
	overflow: hidden;
	margin: 0 1.2em 0 1.2em;
}

.article ul {
	color: #ce545f;
	margin-bottom: 0.6em;
}
.article h1,h2 {
	font-size: 9.5pt;
	color: #ce545f;
	font-family: "AG-Bold", clean, sans-serif;
}
.article h1 {
	margin-top: 0.4em;
}
.article h2 {
	margin: 4em 0 0.6em 0;
}
.article p img {
}
.article p ~ p img {
	margin: 4em 0 0.6em 0;
}
.article {
	margin: 0 0 4em 0;
	width: 100%;
	max-width: 800px;
}

/* Title */
.page-title { font-size: 34px; margin: 0.5em 0 0.5em 0;}
.page-title a { color: #333; }
.page-title a:hover { color: #555; }

/* Site Menu */
[role="navigation"] a {text-decoration: none; color: #929292; }
[role="navigation"] a:hover { color: #ce545f; }
[role="navigation"] .current-cat a {color: #ce545f;}
[role="navigation"] .current-menu-item a {color: #ce545f;}

nav[role="navigation"] {
	font-size: 10.5pt;
	font-family: "AG-Bold", clean, sans-serif;
	letter-spacing: 0.6pt;
	margin: 0 0 6em 0;
}

nav[role="navigation"] ul {
	overflow: auto;
}
nav[role="navigation"] li {
	list-style: none;
	float: none;
	padding: 0.1em 0.9em 0.6em 0; /* Akzidenz Grotest has a slight offset on the top.*/
}
nav[role="navigation"] li:empty {
	display: none;
}
nav[role="navigation"] li a {
	display: block;
}

#pagination {
	text-align: center;
	margin-bottom: 4em;
	font-size: 15pt;
	font-family: AG-Bold, clean, sans-serif;
	letter-spacing: 0.6pt;
	width: 100%;
	max-width: 800px;
}
#pagination ul {
	display: inline-block;
}
#pagination ul li {
	float: left;
	list-style: none;
	margin-left: 0.9em;
}
#pagination ul li.nav-previous {
	margin-left: 0;
}
#pagination ul li.nav-next {
}
#pagination ul li a {
	color: #929292;
}
#pagination ul li.current a {
	color: black;
}
.footer {
	margin: 0 0 1em 0;
	color: #a6a6a6;
}

@media all and (min-width: 600px) {
	.container {
	        margin: 0 1.5em 0 1.5em;
	}
	nav[role="navigation"] {
		position: relative;
		display: block;
	}
	nav[role="navigation"] li {
		float: left;
	}
}


@media all and (min-width: 800px) {
}

